<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <androidx.constraintlayout.widget.Guideline
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5"
        android:id="@+id/half"/>
    <View
        android:id="@+id/greenView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#34ebc3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/half"/>


    <View
        android:id="@+id/whiteView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@id/half"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <View
        android:id="@+id/circle1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/circle"
        app:layout_constraintEnd_toStartOf="@id/circle2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/circle2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/circle"
        app:layout_constraintEnd_toStartOf="@id/circle3"
        app:layout_constraintStart_toEndOf="@id/circle1"
        app:layout_constraintTop_toTopOf="@id/circle1" />

    <View
        android:id="@+id/circle3"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/circle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/circle2"
        app:layout_constraintTop_toTopOf="@id/circle1" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rectangle"
        android:layout_width="300dp"
        android:layout_height="400dp"
        android:background="@drawable/sign_background"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/rectangle"
            app:layout_constraintStart_toStartOf="@id/rectangle"
            app:layout_constraintTop_toTopOf="@id/rectangle" />

        <TextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:text="@string/email"
            android:textColor="#787a7a"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@id/signup"
            app:layout_constraintTop_toBottomOf="@id/signup" />

        <View
            android:id="@+id/emailBox"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@drawable/log_background"
            app:layout_constraintStart_toStartOf="@id/email"
            app:layout_constraintTop_toBottomOf="@id/email" />

        <TextView
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:text="@string/password"
            android:textColor="#787a7a"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@id/emailBox"
            app:layout_constraintTop_toBottomOf="@id/emailBox" />

        <View
            android:id="@+id/passwordBox"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@drawable/log_background"
            app:layout_constraintStart_toStartOf="@id/password"
            app:layout_constraintTop_toBottomOf="@id/password" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/getStartBackground"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/get_start"
            android:gravity="center"
            android:text="@string/get_start"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/passwordBox"
            app:layout_constraintTop_toBottomOf="@id/passwordBox" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/orSign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or_sign"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rectangle" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/facebook"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/facebook"
        app:layout_constraintEnd_toStartOf="@id/twitter"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/orSign" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/twitter"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/facebook"
        app:layout_constraintEnd_toStartOf="@id/google"
        app:layout_constraintStart_toEndOf="@id/facebook"
        app:layout_constraintTop_toTopOf="@id/facebook" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/google"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/facebook"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/twitter"
        app:layout_constraintTop_toTopOf="@id/facebook" />

</androidx.constraintlayout.widget.ConstraintLayout>

